# AlarmRemote

./: .gitignore  CMakeLists.txt  README.md  ajaxremote.apparmor  ajaxremote.desktop.in  clickable.yaml  main.cpp  manifest.json.in
assets/: assets.qrc
po/: ajaxremote.cloudsite.pot  ca.po  da.po  de.po  es.po  fi.po  fr.po  it.po  nb.po  nl.po  pl.po  ru.po  sv.po  uk.po
qml/: Main.qml  qml.qrc
qml/backend/: AjaxController.qml  QrCode.js
qml/pages/: RemotePage.qml
scripts/: desktop-dark.sh  install-device.sh
src/: AjaxApiClient.cpp  AjaxApiClient.h  LocalSecretStore.cpp  LocalSecretStore.h  QrLoginClient.cpp  QrLoginClient.h
